[tool.poetry]
name = "easygrid"
version = "0.1.0"
description = "Gym environment of simple microgrid simulation for Reinforcement Learning"
authors = ["YANN BERTHELOT <yannberthelot1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
gym = "^0.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
