[tool.poetry]
name = "easygrid"
version = "0.1.3"
description = "Gym environment of simple microgrid simulation for Reinforcement Learning"
authors = ["YANN BERTHELOT <yannberthelot1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
gym = "^0.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.20.0"
scriv = {extras = ["toml"], version = "^0.15.2"}
tox = "^3.25.1"
flake8 = "^5.0.3"
black = {version = "^22.6.0", allow-prereleases = true}

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.scriv]
format = "md"
version = "literal: src/easygrid/__init__.py: __version__"
