[tool.poetry]
name = "easygrid"
version = "0.4.1"
description = "Gym environment of simple microgrid simulation for Reinforcement Learning"
authors = ["YANN BERTHELOT <yannberthelot1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.1"
gym = "0.21"
matplotlib = "^3.5.3"
pandas = "^1.4.4"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.20.0"
scriv = {extras = ["toml"], version = "^0.15.2"}
tox = "^3.25.1"
flake8 = "^5.0.3"
black = {version = "^22.6.0", allow-prereleases = true}
coverage = {extras = ["toml"], version = "^6.4.3"}
mypy = "^0.971"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.scriv]
format = "md"
version = "literal: pyproject.toml: tool.poetry.version"

[tool.mypy]
ignore_missing_imports = "True"

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
